[package]
name = "rust_smokeping"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "json"] }
chrono = { version = "0.4", features = ["serde"] }
plotters = "0.3"
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[[bin]]
name = "smokeping-server"
path = "src/server_main.rs"

[[bin]]
name = "smokeping-agent"
path = "src/agent_main.rs"
