[package]
name = "rust_smokeping"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = { version = "0.8", features = ["macros", "json"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
include_dir = "0.7"
mime_guess = "2.0"
plotters = "0.3"
png = "0.18"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "process", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tower-http = { version = "0.6", features = ["compression-gzip"] }

[profile.release]
opt-level = 3       # O0~O3，3最高优化
lto = "thin"        # 建议 thin（全量 lto 更慢但更小更快）
codegen-units = 1   # 更小更快，但编译会变慢
panic = "abort"     # 优化体积
strip = true        # 移除符号表减少体积

[dev-dependencies]
tempfile = "3.23"
tower = "0.5"

[[bin]]
name = "smokeping-server"
path = "src/server_main.rs"

[[bin]]
name = "smokeping-agent"
path = "src/agent_main.rs"
